<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    tools:context="projetaobcc20172.com.projetopetemfoco.activity.EditarPetActivity">

    <include
        android:id="@+id/tb_editar_pet"
        layout="@layout/toolbar">
    </include>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_editar_pet"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ScrollView
            android:id="@+id/scrollViewEditarPet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEditarNomePet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/nome"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etEditarNomePet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="31dp"
                    android:ems="10"
                    android:hint="@string/digite_nome_pet"
                    android:inputType="text" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:id="@+id/tvEditarIdadePet"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/prompt_idade_pet"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvEditarTipoPet"
                        android:paddingLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/prompt_tipo_pet"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:background="@drawable/gradiente_spinner"
                        android:layout_height="wrap_content"
                        android:layout_width="170dp">

                        <Spinner
                            android:id="@+id/idadeEditarSpinner"
                            android:layout_margin="4dp"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:popupBackground="@drawable/fundo_degrade"
                            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:background="@drawable/gradiente_spinner"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <Spinner
                            android:id="@+id/tipoEditarSpinner"
                            android:layout_margin="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:popupBackground="@drawable/fundo_degrade"
                            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvEditarGeneroPet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_genero_pet"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <RadioGroup
                    android:id="@+id/rgEditarGenero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbEditarMacho"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/macho"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/rbEditarFemea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "@string/femea"/>

                    <Button
                        android:id="@+id/bEditarFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:background="@drawable/cornersbuttonfoto"
                        android:padding="7dp"
                        android:textSize="15dp"
                        android:textColor="@color/preto"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Selecione uma foto"/>

                </RadioGroup>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:id="@+id/tvEditarRaçaPet"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/prompt_raca_pet"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvRemoverFotoPet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="40dp"
                        android:layout_margin="6dp"
                        android:textSize="13dp"
                        android:layout_gravity="center"
                        android:text="@string/prompt_remover_imagem_pet"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etEditarRaçaPet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/digite_raca_pet"
                    android:inputType="textEmailAddress" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/tvEditarPortePet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_porte_pet"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@drawable/gradiente_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <Spinner
                        android:id="@+id/porteEditarSpinner"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:popupBackground="@drawable/fundo_degrade"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"/>

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp" />

                <Button
                    android:id="@+id/botao_editar_pet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shapebutton"
                    android:paddingRight="40dp"
                    android:paddingLeft="15dp"
                    android:drawableLeft="@drawable/ic_action_check"
                    android:text="@string/editar" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>



</RelativeLayout>