<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="projetaobcc20172.com.projetopetemfoco.activity.CadastroPetActivity">

    <include
        android:id="@+id/tb_cadastro_pet"
        layout="@layout/toolbar"></include>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_cadastro_pet"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/TexViewCadastroNomePet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/nome"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_nome_pet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:layout_marginTop="31dp"
                    android:ems="10"
                    android:hint="@string/digite_nome_pet"
                    android:inputType="text" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                        <TextView
                            android:id="@+id/TexViewCadastroIdadePet"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="6dp"
                            android:text="@string/prompt_idade_pet"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TexViewCadastroTipoPet"
                            android:paddingLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="6dp"
                            android:text="@string/prompt_tipo_pet"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:background="@drawable/gradiente_spinner"
                        android:layout_height="wrap_content"
                        android:layout_width="170dp">

                        <Spinner
                            android:id="@+id/idadeSpinner"
                            android:layout_margin="4dp"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/TexViewCadastroIdadePet"
                            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:background="@drawable/gradiente_spinner"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <Spinner
                            android:id="@+id/tipoSpinner"
                            android:layout_margin="4dp"
                            android:layout_below="@+id/TexViewCadastroTipoPet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/TexViewCadastroGeneroPet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_genero_pet"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <RadioGroup
                    android:id="@+id/genero_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/gender_textview"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/macho_radio_botao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/macho"
                        android:checked="true"
                    />
                    <RadioButton
                        android:id="@+id/femea_radio_botao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "@string/femea"
                    />
                </RadioGroup>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/TexViewCadastroRacaPet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_raca_pet"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_raca_pet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editText_genero_pet"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/digite_raca_pet"
                    android:inputType="textEmailAddress" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/TexViewCadastroPortePet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/prompt_porte_pet"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@drawable/gradiente_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <Spinner
                        android:id="@+id/porteSpinner"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/TexViewCadastroPortePetPet"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"/>

                </LinearLayout>

                <Button
                    android:id="@+id/botao_cadastrar_pet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editText_senha2"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/shapebutton"
                    android:text="Cadastrar" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>



</RelativeLayout>